--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -1,6 +1,7 @@
 # ****************************************************************************
 # NOTES:
 #
+#Edited by Michael
 # In order for this to work, you must replace STAGING_ORGANISATION below
 # with the name of your staging GitHub organisation, in line 53.
 # You must also replace STAGING_SITE_REPOSITORY below with the name of your
