--- a/indicator-config/18.1.1.yml
+++ b/indicator-config/18.1.1.yml
@@ -21,7 +21,7 @@ graph_title: Covid 19 Monitoring Dashboard
 graph_titles: []
 graph_type: line
 indicator_name: Covid 19 Monitoring Dashboard
-indicator_number: '18.1.1'
+indicator_number: 18.1.1
 national_geographical_coverage: ''
 page_content: ''
 permalink: /covid-2
