--- a/indicator-config/18.1.1.yml
+++ b/indicator-config/18.1.1.yml
@@ -24,7 +24,7 @@ indicator_name: Covid 19 Monitoring Dashboard
 indicator_number: 18.1.1
 national_geographical_coverage: ''
 page_content: ''
-permalink: /covid-2
+permalink: /covid-indicator-1
 precision: []
 reporting_status: complete
 sort: ''
