--- a/indicator-config/18.1.1.yml
+++ b/indicator-config/18.1.1.yml
@@ -17,11 +17,11 @@ expected_disaggregations: []
 graph_annotations: []
 graph_limits: []
 graph_stacked_disaggregation: ''
-graph_title: Covid 19 Monitoring Dashboard
+graph_title: 'Covid 19 Monitoring Dashboard'
 graph_titles: []
 graph_type: line
-indicator_name: Covid 19 Monitoring Dashboard
-indicator_number: 18.1.1
+indicator_name: 'Covid 19 Monitoring Dashboard'
+indicator_number: '18.1.1'
 national_geographical_coverage: ''
 page_content: ''
 permalink: /covid-indicator-1
