--- a/_prose.yml
+++ b/_prose.yml
@@ -85,7 +85,85 @@ prose:
             value: "UN metadata"
             scope: global
       ######### National Metadata #########
-            - name: "national_metadata_update_url"
+      - name: "national_indicator_available"
+        field:
+            element: text
+            label: "Indicator available"
+            translation_key: metadata_fields.national_indicator_available
+            scope: national
+      - name: "national_indicator_description"
+        field:
+            element: text
+            label: "Indicator description"
+            translation_key: metadata_fields.national_indicator_description
+            scope: national
+      - name: "national_geographical_coverage"
+        field:
+            element: text
+            label: "Geographical coverage"
+            translation_key: metadata_fields.national_geographical_coverage
+            scope: national
+      - name: "computation_units"
+        field:
+            element: text
+            label: "Unit of measurement"
+            translation_key: metadata_fields.computation_units
+            scope: national
+      - name: "computation_definitions"
+        field:
+            element: textarea
+            label: "Definitions"
+            translation_key: metadata_fields.computation_definitions
+            scope: national
+      - name: "computation_calculations"
+        field:
+            element: text
+            label: "Calculations"
+            translation_key: metadata_fields.computation_calculations
+            scope: national
+      - name: "other_info"
+        field:
+            element: text
+            label: "Other information"
+            translation_key: metadata_fields.other_info
+            scope: national
+      - name: "quality_assurance"
+        field:
+            element: text
+            label: "Quality assurance"
+            translation_key: metadata_fields.quality_assurance
+            scope: national
+      - name: "international_comparability"
+        field:
+            element: text
+            label: "Comparability with international data/standards"
+            translation_key: metadata_fields.international_comparability
+            scope: national
+      - name: "comments_limitations"
+        field:
+            element: text
+            label: "Comments and limitations"
+            translation_key: metadata_fields.comments_limitations
+            scope: national
+      - name: "rationale_interpretation"
+        field:
+            element: text
+            label: "Rationale and interpretation"
+            translation_key: metadata_fields.rationale_interpretation
+            scope: national
+      - name: "national_data_update_url"
+        field:
+            element: hidden
+            label: "Data last updated"
+            translation_key: metadata_fields.national_data_update_url
+            scope: national
+      - name: "national_data_update_url_text"
+        field:
+            element: hidden
+            label: "Data last updated"
+            translation_key: metadata_fields.national_data_update_url_text
+            scope: national
+      - name: "national_metadata_update_url"
         field:
             element: hidden
             label: "Metadata last updated"
