--- a/config_data.yml
+++ b/config_data.yml
@@ -78,6 +78,7 @@ translations:
   # This pulls in translations from a Git repository.
   - class: TranslationInputSdgTranslations
     source: https://github.com/open-sdg/sdg-translations.git
+    tag: 1.8.0
     branch: 2020-review
   # This pulls in translations from a local 'translations' folder.
   - class: TranslationInputYaml
