--- a/indicator-config/17-19-2.yml
+++ b/indicator-config/17-19-2.yml
@@ -49,9 +49,14 @@ source_active_6: false
 page_content: >- 
   Census taking in Ghana
   
+  
   Population Censuses have been conducted in Ghana at approximately ten-year intervals since 1891.
   
   
-  Ghana has conducted six population Censuses after independence – 2021 was the last.\n 
-  The last three Censuses (2000, 2010 and 2021) combined Population and Housing in one operation. \n
+  Ghana has conducted six population Censuses after independence – 2021 was the last.
+  
+  
+  The last three Censuses (2000, 2010 and 2021) combined Population and Housing in one operation.
+  
+  
   The last Census conducted in 2021 recorded a total population of 30.8 million. 
