--- a/indicator-config/17-19-2.yml
+++ b/indicator-config/17-19-2.yml
@@ -2,7 +2,7 @@
 computation_units: ''
 copyright: ''
 data_footnote: ''
-data_non_statistical: true
+data_non_statistical: false
 data_notice_class: ''
 data_notice_heading: ''
 data_notice_text: ''
@@ -28,7 +28,7 @@ permalink: ''
 precision: []
 reporting_status: complete
 sort: ''
-standalone: false
+standalone: true
 tags: []
 source_active_1: true
 source_organisation_1: World Bank
@@ -48,15 +48,15 @@ source_active_5: false
 source_active_6: false
 page_content: >- 
   Census taking in Ghana
-  
+
   
   Population Censuses have been conducted in Ghana at approximately ten-year intervals since 1891.
-  
-  
-  Ghana has conducted six population Censuses after independence – 2021 was the last.
-  
-  
-  The last three Censuses (2000, 2010 and 2021) combined Population and Housing in one operation.
-  
-  
-  The last Census conducted in 2021 recorded a total population of 30.8 million. 
+
+ 
+  Ghana has conducted six population Censuses after independence – 2021 was the last. 
+
+
+  The last three Censuses (2000, 2010 and 2021) combined Population and Housing in one operation. 
+
+
+  The last Census conducted in 2021 recorded a total population of 30.8 million.
