--- a/indicator-config/17-19-2.yml
+++ b/indicator-config/17-19-2.yml
@@ -50,7 +50,8 @@ page_content: >-
   Census taking in Ghana
 
   
-  Population Censuses have been conducted in Ghana at approximately ten-year intervals since 1891.
+  Population Censuses have been conducted in Ghana at approximately ten-year intervals since 1891. <a href="./publications" aria-label="More publications">More
+      publications...</a>
 
  
   Ghana has conducted six population Censuses after independence – 2021 was the last. 
