--- a/indicator-config/17-19-2.yml
+++ b/indicator-config/17-19-2.yml
@@ -50,8 +50,7 @@ page_content: >-
   Census taking in Ghana
 
   
-  Population Censuses have been conducted in Ghana at approximately ten-year intervals since 1891. <a href="./publications" aria-label="More publications">More
-      publications...</a>
+  Population Censuses have been conducted in Ghana at approximately ten-year intervals since 1891.
 
  
   Ghana has conducted six population Censuses after independence – 2021 was the last. 
@@ -60,4 +59,5 @@ page_content: >-
   The last three Censuses (2000, 2010 and 2021) combined Population and Housing in one operation. 
 
 
-  The last Census conducted in 2021 recorded a total population of 30.8 million.
+  The last Census conducted in 2021 recorded a total population of 30.8 million. <a href="https://statsghana.gov.gh/censusurvey.php?category=MTcxNTQ0MjMyNC40NzI1/webstats/0pn45p0sp4" aria-label="Read more">read
+      more...</a>
