--- a/indicator-config/17-19-2.yml
+++ b/indicator-config/17-19-2.yml
@@ -2,7 +2,7 @@
 computation_units: ''
 copyright: ''
 data_footnote: ''
-data_non_statistical: false
+data_non_statistical: true
 data_notice_class: ''
 data_notice_heading: ''
 data_notice_text: ''
@@ -31,16 +31,16 @@ sort: ''
 standalone: true
 tags: []
 source_active_1: true
-source_organisation_1: World Bank
+source_organisation_1: Ghana Statistical Service
 source_periodicity_1: Annual
-source_earliest_available_1: 2004
+source_earliest_available_1: 1891
 source_geographical_coverage_1: Ghana
-source_url_1: https://data.worldbank.org/indicator/SI.POV.DDAY?locations=GB
-source_url_text_1: Poverty headcount ratio at $1.90 a day (2011 PPP) (% of population)
-source_release_date_1: 28/05/2020
+source_url_1: https://www.statsghana.gov.gh/
+source_url_text_1: National Statistical Office of Ghana
+source_release_date_1: ''
 source_next_release_1: TBA
-source_statistical_classification_1: Non-official
-source_contact_1: Research@WorldBank.org
+source_statistical_classification_1: Official
+source_contact_1: info@statsghana.gov.gh
 source_active_2: false
 source_active_3: false
 source_active_4: false
