--- a/indicator-config/17-19-2.yml
+++ b/indicator-config/17-19-2.yml
@@ -52,7 +52,7 @@ source_active_4: false
 source_active_5: false
 source_active_6: false
 page_content: >- 
-  ** Census taking in Ghana **
+  **Census taking in Ghana
 
   
   Population Censuses have been conducted in Ghana at approximately ten-year intervals since 1891.
