--- a/_prose.yml
+++ b/_prose.yml
@@ -99,7 +99,7 @@ prose:
             scope: national
       - name: SDG_TARGET
         field:
-            element: text
+            element: hidden
             label: Target
             translation_key: metadata_fields.SDG_TARGET
             scope: national
