--- a/_prose.yml
+++ b/_prose.yml
@@ -47,12 +47,12 @@ prose:
             label: "Target name"
             translation_key: metadata_fields.target
             scope: global
-      - name: "target_id"
-        field:
-            element: hidden
-            label: "Target number"
-            translation_key: metadata_fields.target_id
-            scope: global
+ #     - name: "target_id"
+ #       field:
+ #           element: hidden
+  #          label: "Target number"
+    #        translation_key: metadata_fields.target_id
+    #        scope: global
       - name: "indicator_definition"
         field:
             element: textarea
