--- a/indicator-config/1-1-1.yml
+++ b/indicator-config/1-1-1.yml
@@ -1,12 +1,12 @@
 ﻿composite_breakdown_label: ''
 computation_units: Percent
 copyright: GSS
-data_footnote: ''
+data_footnote: As differences in the cost of living across the world evolve, the international poverty line has to be periodically updated using new PPP price data to reflect these changes. The last change was in October 2015, when the World Bank adopted $1.90 as the international poverty line using the 2011 PPP. Prior to that, the 2008 update set the international poverty line at $1.25 using the 2005 PPP.
 data_non_statistical: false
 data_notice_class: ''
 data_notice_heading: ''
 data_notice_text: ''
-data_show_map: true
+data_show_map: false
 data_start_values: []
 embedded_feature_footer: ''
 embedded_feature_html: ''
