--- a/indicator-config/2-1-2.yml
+++ b/indicator-config/2-1-2.yml
@@ -6,7 +6,7 @@ data_non_statistical: false
 data_notice_class: ''
 data_notice_heading: ''
 data_notice_text: ''
-data_show_map: true
+data_show_map: false
 data_start_values: []
 embedded_feature_footer: ''
 embedded_feature_html: ''
@@ -24,7 +24,7 @@ graph_type: bar
 indicator_name: global_indicators.2-1-2-title
 target_name: global_targets.2-1-title
 indicator_number: 2.1.2
-un_designated_tier: 2.0
+un_designated_tier: Tier I
 un_custodian_agency: Food and Agriculture Organization (FAO)
 goal_meta_link: https://unstats.un.org/sdgs/metadata/files/Metadata-02-01-02.pdf
 goal_meta_link_text: United Nations Sustainable Development Goals Metadata (PDF 426 KB)
