--- a/config_data.yml
+++ b/config_data.yml
@@ -122,7 +122,22 @@ map_layers:
     id_property: DISTRICTID
     output_subfolder: district_272
     filename_prefix: indicator_
-  
+
+# Indicator options
+# -----------------
+# This control optional settings to control how your indicators are loaded.
+# Below are all the possible options, along with the defaults.
+indicator_options:
+  # This specifies the columns that should not be considered disaggregations.
+  non_disaggregation_columns:
+    - Year
+    - Units
+    - Series
+    - Value
+    - GeoCode
+    - Observation status
+    - Unit multiplier
+    - Unit measure
 
 
 
