--- a/config_data.yml
+++ b/config_data.yml
@@ -49,7 +49,7 @@ inputs:
       - REPORTING_TYPE
     drop_singleton_dimensions: true
     dsd: 'GSS_DSD.xml'
-    import_codes: true
+    import_translation_keys: true
   - class: InputWordMeta
     path_pattern: meta/*-*.docm
   - class: InputYamlMeta
